--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ li {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
   width: 66%;
   margin-left: 25%;
   margin-right: 25%;
@@ -51,4 +53,21 @@ footer {
 footer p {
   margin: 0.25em;
   text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  color: #a2915c;
+}
+
+.page-content {
+  position: absolute;
+  top: 10%;
+  left: 25%;
+  width: 50%;
+  background-color: rgba(255, 255, 255, 0.7);
 }
